# polywhale

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: README.md  disable_all.sh  health_check.sh  install.sh  poly_arbs_scan.sh
deploy/systemd/: poly-arbs.service  poly-arbs.timer  poly-paper-settle.service  poly-paper-settle.timer  poly-watch.service  poly-watch.timer  telegram-poll.service  telegram-poll.timer  whale-discover.service  whale-discover.timer  whale-fast.service  whale-fast.timer  whale-refresh.service  whale-refresh.timer  whale-signals.service  whale-signals.timer  whale-watch.service  whale-watch.timer  whale-ws.service
notes/: WHALE_PERFORMANCE.md
scripts/: make_readme_charts.py
src/polywhale/: ai_advisor.py  backtest.py  cli.py  config.py  copy_trader.py  db.py  friction_observer.py  historical_backfill.py  historical_backtest.py  logging_setup.py  maker_router.py  monte_carlo.py  poly_arb.py  poly_paper.py  poly_ws.py  (+17 more)
tests/: _preview_alert.py  test_ai_advisor.py  test_backtest.py  test_config.py  test_copy_trader.py  test_db.py  test_friction_observer.py  test_historical_backtest.py  test_logging_setup.py  test_maker_router.py  test_monte_carlo.py  test_poly_arb.py  test_poly_paper.py  test_poly_watch.py  test_polymarket.py  test_smoke.py  test_telegram.py  test_walk_forward.py  test_whale_alerter.py  test_whale_classify.py  test_whale_diff.py  test_whale_discovery.py  test_whale_refresh.py  test_whale_review.py  test_whale_sizing.py  test_whale_stats.py  test_whale_survival.py  test_whale_watch.py  test_ws_dispatcher.py
(+16 files in other folders)
