[project]
name = "polywhale"
version = "0.1.0"
description = "Polymarket whale-tracking + combinatorial arbitrage bot. Open-source, copy-trading-ready."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DevAntsa" }]
keywords = ["polymarket", "prediction-markets", "arbitrage", "copy-trading", "whale-tracking"]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
polywhale = "polywhale.cli:main"

[project.urls]
Repository = "https://github.com/DevAntsa/polywhale"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.hatch.build.targets.wheel]
packages = ["src/polywhale"]
